@@ -591,19 +591,19 @@
                                                            emailAddresses,
                                                            names,
                                                            fullNames);
-                  var error = false;
 
                   var abRdf = Components.classes["@mozilla.org/rdf/rdf-service;1"].getService(Components.interfaces.nsIRDFService);
                   var abRootDir = abRdf.GetResource("moz-abdirectory://").QueryInterface(Components.interfaces.nsIAbDirectory);
                   var abSubDirs = abRootDir.childNodes.QueryInterface(Components.interfaces.nsISimpleEnumerator);
-                  while (!error && !mailingListURI
+                  while (!mailingListURI
                          && abSubDirs.hasMoreElements()) {
+                      var error = false;
                       var abDir = abSubDirs.getNext()
                                            .QueryInterface(Components.interfaces.nsIAbDirectory);
                       var abCardsEnumerator = abDir.childCards;
                       try {
                           abCardsEnumerator.first();
-                          while (!mailingListURI) {
+                          while (!error && !mailingListURI) {
                               var abCard = abCardsEnumerator.currentItem()
                                                             .QueryInterface(Components.interfaces.nsIAbCard);
                               if (abCard && abCard.isMailList) {
